[package]
name = "mashup"
version = "0.1.9" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Concatenate identifiers in a macro invocation"
repository = "https://github.com/dtolnay/mashup"
readme = "README.md"

[badges]
travis-ci = { repository = "dtolnay/mashup" }

[dependencies]
proc-macro-hack = "0.4"
mashup-impl = { version = "0.1.9", path = "impl" }

[workspace]
members = ["impl"]
