[package]
name = "mashup"
version = "0.1.13+deprecated" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Concatenate identifiers in a macro invocation"
documentation = "https://docs.rs/mashup"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/mashup"

[dependencies]
proc-macro-hack = "0.4"
mashup-impl = { version = "=0.1.13", path = "impl" }

[workspace]
members = ["impl"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
